--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -382,7 +385,7 @@ src="images/momo.png" /></p>
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>sample = rnorm(1000)
 mean(sample)</code></pre>
-<pre><code>## [1] 0.007508768</code></pre>
+<pre><code>## [1] 0.001505925</code></pre>
 <p>Here’s a direct link to the about page: <a
 href="about.html">about</a>.</p>
 <div id="new-section" class="section level2">
