Edit index, plotly, about, dashoard

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>My personal website</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -357,40 +357,33 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">My personal website</h1>
 
 </div>
 
 
-<div id="this-is-jeffs-awesome-website" class="section level1">
-<h1>This is Jeff’s awesome website</h1>
-<p><img
-src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
-<p>Here’s some text. I like the internet. I use <a
-href="https://www.google.com/">google</a> all the time to do data
-science.</p>
-<p>This is my dog momo, who likes to be on the internet. <img
-src="images/momo.png" /></p>
+<div id="hi-im-zhaohua-chunyuzozo" class="section level1">
+<h1>Hi! I’m Zhaohua Chunyu(Zozo)</h1>
 <center>
-<img src="images/momo.png" style="width: 25%">
+<img src="images/me.png" style="width: 25%">
 </center>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-## ✔ ggplot2 3.3.6      ✔ purrr   0.3.5 
-## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-## ✔ readr   2.1.2      ✔ forcats 0.5.2 
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>sample = rnorm(1000)
-mean(sample)</code></pre>
-<pre><code>## [1] 0.001505925</code></pre>
+<p>I’m currently a student at Columbia Mailman School of Public Health
+studying Biostatistics focusing on Data Science in Public Health.</p>
+<p>I was born into a medical family. Deeply influenced by my father, a
+pronounced colorectal surgeon and oncologist in Shanghai, I have
+developed a keen interest in health and disease. I pursued a bachelor
+degree of Biological Sciences at USC and interned at Shanghai Biochip
+Corporation (SBC) and Merck Pharmaceutical previously.</p>
+<div id="experiences" class="section level2">
+<h2>Experiences</h2>
+<p>Here’s my <a href="doc/resume.pdf">resume</a>. Please take a
+look!</p>
+<p>I also have <a
+href="https://www.linkedin.com/in/zhaohua-chunyu-8748b2224/">LinkedIn</a>
+and <a href="https://github.com/zc2691">Github</a> page. Get to know me
+more!</p>
 <p>Here’s a direct link to the about page: <a
 href="about.html">about</a>.</p>
-<div id="new-section" class="section level2">
-<h2>New Section!!</h2>
-<p><a href="plotly.html">Here’s</a> a page with plotly plots</p>
 </div>
 </div>
 
