--- a/about.html
+++ b/about.html
@@ -334,6 +334,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -359,8 +362,8 @@ div.tocify {
 </div>
 
 
-<div id="this-is-jeffs-awesome-website" class="section level1">
-<h1>This is Jeff’s awesome website</h1>
+<div id="this-is-zozos-personal-website" class="section level1">
+<h1>This is Zozo’s personal website</h1>
 <p>This website is made in rmarkdown and other stuff.</p>
 </div>
 
