--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
   <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="mailto:&lt;zchunyu1224@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
